# miner_sha256d

./: CMakeLists.txt  README.md  config.json
include/miner/: common.hpp  config.hpp  hash.hpp  logging.hpp  metrics.hpp  mining.hpp  runtime.hpp  sv2.hpp  work.hpp
src/: main.cpp
src/core/: config.cpp  logging.cpp  metrics.cpp  runtime.cpp
src/hash/: sha256.cpp  sha256d.cpp
src/mining/: scheduler.cpp  submit.cpp  worker.cpp
src/sv2/: client.cpp  framing.cpp  messages.cpp  session.cpp
src/tests/: test_main.cpp
src/work/: job.cpp  merkle.cpp  target.cpp
